Fixed row border and collapse icon not appearing in playerlist page

--- a/CohtmlUI/BTKUI.less
+++ b/CohtmlUI/BTKUI.less
@@ -434,6 +434,29 @@
       width: 100px;
     }
 
+    .icon-collapse {
+      background: url("images/Arrow Up.png");
+      background-size: cover;
+      background-repeat: no-repeat;
+      height: 90px;
+      width: 90px;
+    }
+
+    .icon-expand {
+      background: url("images/Arrow Up.png");
+      background-size: cover;
+      background-repeat: no-repeat;
+      transform: rotate(180deg);
+      height: 90px;
+      width: 90px;
+    }
+
+    .rowBorder {
+      border-bottom-color: @standard-text-color;
+      border-bottom-width: 4px;
+      border-bottom-style: solid;
+    }
+
     .category-row {
       margin-top: 10px;
       margin-bottom: 10px;
